<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>io.datapulse</groupId>
    <artifactId>datapulse-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Datapulse Parent</name>

    <modules>
        <module>datapulse-common</module>
        <module>datapulse-platform</module>
        <module>datapulse-tenancy-iam</module>
        <module>datapulse-integration</module>
        <module>datapulse-etl</module>
        <module>datapulse-analytics-pnl</module>
        <module>datapulse-pricing</module>
        <module>datapulse-execution</module>
        <module>datapulse-promotions</module>
        <module>datapulse-seller-operations</module>
        <module>datapulse-audit-alerting</module>
        <module>datapulse-api</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <clickhouse-jdbc.version>0.9.6</clickhouse-jdbc.version>
        <minio.version>9.0.0</minio.version>
        <okhttp.version>5.2.1</okhttp.version>
        <shedlock.version>7.7.0</shedlock.version>
        <spring-vault.version>3.1.2</spring-vault.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-platform</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-tenancy-iam</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-etl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-analytics-pnl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-pricing</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-execution</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-promotions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-seller-operations</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.datapulse</groupId>
                <artifactId>datapulse-audit-alerting</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>com.clickhouse</groupId>
                <artifactId>clickhouse-jdbc</artifactId>
                <version>${clickhouse-jdbc.version}</version>
                <classifier>all</classifier>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp-jvm</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-spring</artifactId>
                <version>${shedlock.version}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-provider-jdbc-template</artifactId>
                <version>${shedlock.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.vault</groupId>
                <artifactId>spring-vault-core</artifactId>
                <version>${spring-vault.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct-binding.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
